# real-esrgan-upscaler-tool

./: .version  CMakeLists.txt  README.md
real-esrgan-upscaler-tool/: gui.py  main.py  requirements.txt  upscaler.py
real-esrgan-upscaler-tool/tests/: test_upscaler.py
src/: imageprocessor.cpp  imageprocessor.h  mainwindow.cpp  mainwindow.h  upscaler.cpp  upscaler.h
tests/: test_upscaler.cpp
